--- a/iframe-generator.css
+++ b/iframe-generator.css
@@ -573,12 +573,12 @@ body {
 
 .iframe-container.tablet {
     width: 768px;
-    height: 500px;
+    max-width: 100%;
 }
 
 .iframe-container.mobile {
     width: 375px;
-    height: 600px;
+    max-width: 100%;
 }
 
 #preview-iframe {
@@ -731,7 +731,7 @@ body {
     .iframe-container.tablet,
     .iframe-container.mobile {
         width: 100%;
-        height: 500px;
+        /* Let JavaScript control height - remove fixed height */
     }
     
     .preview-header {
